Create, general page structure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+        Header
+    </header>
+    <!-- Main Content-->
+    <main>
+        Main content
+    </main>
+    <!-- Footer -->
+    <footer>
+        Footer
+    </footer>
 </body>
 
 </html>
