--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
 <body>
     <!-- Header -->
     <header>
-        Header
+        <a href="index.html"> 
+            <h1 id="logo">Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Signup</a></li>
+            </ul>
+        </nav>
     </header>
     <!-- Main Content-->
     <main>
