--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </header>
     <!-- Main Content-->
     <main>
-        Main content
+        <section id="hero">
+            
+        </section>
     </main>
     <!-- Footer -->
     <footer>
