Add cover text with club name and location

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="stylesheet" href="assets/css/style.css" >
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <a href="index.html"> 
+        <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -36,7 +36,10 @@
     <!-- Main Content-->
     <main>
         <section id="hero">
-            
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
         </section>
     </main>
     <!-- Footer -->
