--- a/gallery.html
+++ b/gallery.html
@@ -14,13 +14,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="stylesheet" href="assets/css/style.css" >
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <a href="index.html"> 
+        <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -35,7 +35,21 @@
     </header>
     <!-- Main Content-->
     <main>
-        Main content
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
+        </section>
     </main>
     <!-- Footer -->
     <footer>
