Style signup page

--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <!-- Main Content-->
-    <main>
+    <main id="signup-main">
         <!-- Signup-form section -->
         <section id="signup">
             <form action="https://formdump.codeinstitute.net" method="POST" id="signup-form">
